--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Instructions"></activity>
+        <activity android:name=".RatingActivity"></activity>
+        <activity android:name=".Addcontacts" />
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".ActualProfile" />
+        <activity android:name=".Instructions" />
         <activity android:name=".Emergency" />
         <activity android:name=".LawsForwomen" />
         <activity android:name=".Tips" />
         <activity android:name=".Volunteer" />
-        <activity android:name=".Profile" />
-        <activity android:name=".Verify" />
+        <activity android:name=".Profile"/>
+        <activity android:name=".Verify"
+            android:parentActivityName=".Login"/>
         <activity android:name=".Login" />
         <activity android:name=".Splash">
             <intent-filter>
@@ -29,7 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/My_theme" />
     </application>
 
 </manifest>
